Fix style related bugs
Footer in main main content did not stick to the end of the container
Search input overflowed from sidebar on xs2 screens

--- a/assets/styles/_sidebar.scss
+++ b/assets/styles/_sidebar.scss
@@ -44,6 +44,7 @@ $sidebar-bg: $gray-300;
     padding-top: .25rem;
     padding-bottom: .25rem;
     background-color: $sidebar-bg;
+    min-width: 0;
 
     &::placeholder {
         @extend .standard-transition;
